@@ -24,7 +24,7 @@
  * SUCH DAMAGE.
  */
 
-This is flipit version 0.3.0, a program for controlling X10 devices
+This is flipit version 0.3.1, a program for controlling X10 devices
 via a cm17a "Firecracker" from X10 Ltd.
 
 I can be reached at Matt Armstrong <matt@lickey.com>.
@@ -33,4 +33,3 @@ Please see the COPYING file for the license information.
 Please see the INSTALL file for installation instructions.
 Please see the THANKS file for those who have made this program possible.
 Please see the NEWS file for user-visible changes.
-Please see the ChangeLog file for source code changes.
