@@ -1,3 +1,5 @@
-Thanks to the following people for bug fixes and/or suggestions:
+Thanks to the following people for bug fixes and/or suggestions.  Email
+addresses are omitted to prevent SPAM.
 
-Shawn Dvorak <shawndvorak@worldnet.att.net>
+Charlie Root
+Shawn Dvorak
