@@ -27,7 +27,7 @@
 dnl FLIPIT_MISSING_POD_PROG(NAME, PROGRAM, DIRECTORY)
 AC_DEFUN(FLIPIT_MISSING_POD_PROG,
 [AC_MSG_CHECKING(for working $2)
-if ($2 --help) < /dev/null 2>&1 | grep 'sage:.*$2' > /dev/null 2>&1; then
+if ($2 --help) < /dev/null 2>&1 | grep 'sage:' > /dev/null 2>&1; then
 	$1=$2
 	AC_MSG_RESULT(found)
 else
