@@ -42,7 +42,7 @@ flipit - control the X10 Firecracker (CM17A)
 <HR>
 <H1><A NAME="DESCRIPTION">DESCRIPTION</A></H1>
 <P>
-This document describes flipit version 0.3.0.
+This document describes flipit version 0.3.1.
 
 <P>
 Flipit allows you to control X10 devices with your Unix computer by means
